Changes in 1.8 (??.??.2011)
 - CSceneNodeAnimatorCameraFPS now resets the key-input when it was disabled (thx @ gerdb for reporting and patch-proposal)

 - Properly destroy OpenGL resources on linux (thx @curaga for the patch)

 - Fix diplay bux in the attribute-panel of the GUIEditor. Fixes bug 3517314 (thx @Darkcoder  for reporting).

 - Allow caching cursor position on X11 to work around slow XQueryPointer calls (thx @Hendu for reporting+patch proposal)

 - Struct packing works now with gcc 4.7 changes on MinGW (thx @Sudi for reporting).

 - Struct packing uses now same solution throughout (by including headers in corresponding places)

 - User can now set characters used for decimal point in fast_atof for localisation.

 - Add parameter useAlphaChannel to second IGUIEnvironment::addImage function.

 - Fix vsync on X11

 - Fix MRT disabling. Bug found and fixed by hendu.

 - core:::array::reallocate returning now immediately when it has nothing to do. Should reduce a lot of memory thrashing on irrArrays.

 - Start mesh animations at first OnAnimate , before start-frame was rather random.  Thx @Auria for reporting and patch proposal.

 - renderTargetTexture now working with ECF_R5G6B5

 - add -fPic in c::b linux fast math shared build.

 - triangle3d::isPointInsideFast now using some epsilon to catch all points on the borders.

 - triangle3d::getIntersectionOfPlaneWithLine calculates now with higher precision for more exact results.

 - triangle3d::isOnSameSide (used by isPointInside) calculates now with higher precision and uses some epsilon to make it work with larger integers and less floating point troubles. Slightly slower now.

 - new function equalsByUlp to test for spacing between floating point numbers.

 - speedup for collada writing.

 - speedup for xml-writing.

 - CFileSystem::removeFileArchive now checking for normalized path

 - Fix zip's with passwords on 64-bit systems (thx @ Dr. Gladman for writing the bugfix)
